apps/base/monitoring/grafana/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.${CLUSTER_DOMAIN}`)
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
